       will lead to references to invalid memory. Keeping them that
       long is a bit of overkill, but more future-proof (Bug #494).
  - (prolang.y) Struct names are searched only the global namespace
       as that is where structs are defined. Searched in the local
       namespace can get the driver confused with references to
       undefined structs. (Bug #493)

13-Oct-2007 (Lars Duening)
  - (interpret, simulate.c) Changed the apply cache counters to 'unsigned
       long' to reduce the possibility of an overflow (Bug #520).
  - (interpret.c) setup_new_frame() now updates the csp->funstart entry
       by itself, instead of having the caller do it. This is not just
       more convenient, but also avoids problems with possible errors
       during its execution (as the error handling will try to create
       a stack trace). (Bug #495)
  - (prolang.y, lex.c) UNKNOWN identifiers are kept around until the
       end of the compilation, as some parser rules can look-ahead multiple
       tokens pointing to the same UNKNOWN identifier, so an early free
       will lead to references to invalid memory. Keeping them that
       long is a bit of overkill, but more future-proof (Bug #494).

07-Oct-2007 (Lars Duening)
  - (comm.c) When in charmode, don't attempt to read in as much data
       as the buffer has left space: otherwise the handling of such an
       'overlong command' confuses the charmode engine and causes the socket
       to close prematurely. Yes, this is more a workaround than a real fix
       (Bug #442).
  - (simulate, interpret) The value thrown in a catch is now held in
       the catch context could be leaked if a second error happens and
       is caught in the master::runtime_error() handler (Bug #513).
  - (configure) When testing for libiconv, reference a real libiconv method.
       This catches situations where libiconv exists, but is of the
       wrong architecture.

06-Oct-2007 (Lars Duening)